[package]
name = "loony-codec"
version = "0.5.1"
authors = ["loony contributors <team@loony.rs>"]
description = "Utilities for encoding and decoding frames"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony.git"
documentation = "https://docs.rs/loony-codec/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[lib]
name = "loony_codec"
path = "src/lib.rs"

[dependencies]
loony-bytes = { git="https://github.com/sankar-boro/loony" }
loony-util = { git="https://github.com/sankar-boro/loony" }

log = "0.4"
tokio = { version = "1", default-features = false }
bitflags = "1.3"

[dev-dependencies]
loony = { git="https://github.com/sankar-boro/loony" }

futures = "0.3.13"
