[package]
name = "loony-util"
version = "0.1.1"
authors = ["loony contributors <team@loony.rs>"]
description = "Utilities for loony framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://loony.rs"
repository = "https://github.com/loony-rs/loony.git"
documentation = "https://docs.rs/loony-util/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[lib]
name = "loony_util"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2"
slab = "0.4"
futures-core = { version = "0.3.13", default-features = false, features = ["alloc"] }
futures-sink = { version = "0.3.13", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.6"

[dev-dependencies]
loony = { git="https://github.com/sankar-boro/loony" }
